# clion-verilog-template

./: .gitmodules  CMakeLists.txt
bench/: CMakeLists.txt  Testbench.h  buf_ram_tb.hex  buf_ram_tb.v
cmake/: hdl.cmake
src/: CMakeLists.txt  buf_ram.v  test_usb_streaming_top.v
synthesis/: CMakeLists.txt  icestick.pcf
